www/main.css
.no-padding {
    padding-left: 0;
    padding-right: 0;
}

.no-right-gap {
    margin:0;
}

/* 
brand {
    font-size: 32px;
    font-weight: bold;
    color: white;
    text-shadow: 1px 1px 2px red;
} */

.footer {
    height: 256px;
}

.h-line-green {
    border-top: 7px solid #3E5C03
}

.h-line-red {
    border-top: 7px solid #ff4f4d
}

.h-line-white {
    border-top: 7px solid #ffffff;
}

hr {
    width: 100%;
    display: block;
    height: 0px;
    border: 0;
    
    margin: 0em 0;
    padding: 0;    
}

.footer-red {
    background-color: #fff6f2; /*red*/
}

.footer-green {
    background-color: #fcfcf8; /*green*/
}

/* small */
@media (max-width: 572px) {
    .footer-logo {
        width: 192px;
        height: 192px;
        float: left;
        top: 32px;
        position: relative;
    }

    .footer-address {
        text-align: center;
        margin-top: 0px;
        position: relative;
        font-size: medium;
        bottom: 0;
        left: 0;
    }

    .social {
        margin-left: 1em;
        margin-top: 10px;
        margin-bottom: 20px;
    }

    .footer-address address {
        margin: 0px;
        margin-left: 1em;
        line-height: 1.2em;
    }

    .footer-slogan {
        height: 256px;
        position: absolute;
        top: -184px;
        /* bottom: -5px; */
        right: 10px;
        z-index: 2000;
    } 
}

@media (min-width: 572px) { 
    .footer-logo {
        width: 192px;
        height: 192px;
    }

    .footer-address {
        margin-top: 72px;
        position: relative;
        font-size: medium;
        bottom: 0;
        left: 0;
    }

    .footer-address address {
        margin: 0px;
        margin-left: 1em;
        line-height: 1.1em;
    }

    .social {
        margin-left: 1em;
        margin-top: -50px;
        margin-bottom: 20px;
    }

    .footer-slogan {
        height: 150%;
        float: right;
        position: absolute;
        bottom: 10px;
        right: 10px;
        z-index: 1000;
    }
}

#custom-carousel {
    height: 30px;
}

.footer-address i {
    color: black;
}

/* #fcfcf8; green */
/* #fff6f2; red */
.body-green {
    /* padding-top: 58px; */
    background-color: #fcfcf8; /*green*/
} 

.body-red {
    background-color: #fff6f2; /*red*/
}

/* large */
@media (min-width: 572px) { 
    .item-card {
        background-color: white;
        box-shadow: 1px 1px 1px 1px #ccc;
        position: relative;
        left: 150px;
        width: 720px;
    }
    .item-description {
        text-align: center;
        letter-spacing: 3px;
        padding: 2em;
        line-height: 2;
    }

    /* effects on image */
    div.item-image-effects-red::after {
        content: "";
        position: absolute;
        height: 100%;
        width: 100%;
        /* border-radius: 50%; */
        box-shadow: inset 3px 3px 128px 128px #fff6f2;
        top: 0;
        left: 0;
        z-index: 1; /* You can use higher to ensure that it stays on top */
    }

    div.item-image-effects-green::after {
        content: "";
        position: absolute;
        height: 100%;
        width: 100%;
        /* border-radius: 50%; */
        box-shadow: inset 3px 3px 128px 128px #fcfcf8;
        top: 0;
        left: 0;
        z-index: 1; /* You can use higher to ensure that it stays on top */
    }

    div.item-image-effects-white::after {
        content: "";
        position: absolute;
        height: 100%;
        width: 100%;
        /* border-radius: 50%; */
        box-shadow: inset 3px 3px 128px 128px white;
        top: 0;
        left: 0;
        z-index: 1; /* You can use higher to ensure that it stays on top */
    }

    .item-image {
        width: 100%;
    }

}

/* small */
@media (max-width: 572px) { 
    .item-card {
        box-shadow: 1px 1px 1px 1px #ccc;
    }
    .item-description {
        background-color: #fff;
        text-align: left;
        letter-spacing: 2px;
        line-height: 2;
        padding: 1em;
    }

    /* effects on image */
    div.item-image-effects-* {
        height: 100%;
        width: 100%;
        padding-left: 0;
        padding-right: 0;
    }

    .item-image {
        width: 100%;
    }
}

/* .nav-link {
color: #000;
} */

.navbar-fixed-top {
    background-color: #ffffff00 !important;
    transition: background-color 1000ms linear;
}

.navbar-fixed-top.scrolled {
    background-color: inherit !important;
    /* background-color: #fff !important; */
    transition: background-color 1000ms linear;
}

.fixed-top {
    position: fixed;
}

